[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
name = "OpenStudioLandscapes-DagsterCodeLocation-Showcase"
dynamic = [
    "version",
]
description = "This is a demo package for OpenStudioLandscapes-Dagster to showcase Dagster functionality."
license-files = [
    "LICENSE.txt",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dagster==1.9.11",
#    "dagster-webserver",
]

[project.optional-dependencies]
optional-base = [
    "OpenStudioLandscapes-Dagster[optional-base] @ git+https://github.com/michimussato/OpenStudioLandscapes-Dagster.git",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-DagsterCodeLocation-Showcase"

[tool.dagster]
module_name = "OpenStudioLandscapes.DagsterCodeLocation.Showcase.definitions"
working_directory = "src"
project_name = "OpenStudioLandscapes-DagsterCodeLocation-Showcase"

#[tool.setuptools]
#include-package-data = true
#platforms = [
#    "Linux",
#]

#[tool.setuptools.packages.find]
#exclude = [
#    "tests",
#]
#include = [
#    "OpenStudioLandscapes.Dagster.Showcase"
#]
#namespaces = true
#where = [
#    "src/",
#]

[tool.setuptools]
include-package-data = true
#packages = [
#    "OpenStudioLandscapes.DagsterCodeLocation.Showcase",
#]
platforms = [
    "Linux",
]

#[tool.setuptools.package-dir]
#"" = "src"

[tool.setuptools.packages.find]
exclude = [
    "tests",
]
namespaces = true
where = [
    "src",
]
include = ["OpenStudioLandscapes.DagsterCodeLocation.*"]
